<resources>
    <string name="app_name">Final Project</string>
    <string name="title_request">My Request</string>
    <string name="short_by">Short by</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="text_template">Templates</string>
    <string name="text_request">New Request</string>
    <string name="title_request_item">Title Request</string>
    <string name="subject">is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the</string>
    <string name="title_request_area">Human Resources</string>
    <string name="user">\@UserName</string>
    <string name="area">Operations</string>
    <string name="request_btn">Request</string>
    <string name="draf_btn">Draf</string>
    <string name="save">Save</string>
    <string name="assigned_to">Assigned:</string>
    <string name="name_hint">Name</string>
    <string name="rol_string_label">Rol</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="email_hint">Email</string>
    <string name="email_textview_text">Email</string>
    <string name="save_profile_button">Save profile</string>
    <string name="change_password_textview_text">Change Password</string>
    <string name="current_password_hint">Current password</string>
    <string name="new_password_textview_hint">New password</string>
    <string name="confirm_password_hint">Confirm new password</string>
    <string name="save_new_password_button_text">Save New Password</string>
    <string name="welcome_to_help_desk_label">Welcome to help desk!</string>
    <string name="profile_user_hint">Email</string>
    <string name="password_login_hint">Password</string>
    <string name="log_in_button_text">Log in</string>
    <string name="login_user_edittext_helper_text">Here goes your email!</string>
    <string name="login_password_edittext_helper_text">Here goes your password!</string>
    <string name="manager_area_hint">Manager</string>
    <string name="new_request_textview">New Request</string>
    <string name="request_title_hint">Request Tittle</string>
    <string name="request_content_hint">Request Content</string>
    <string name="first_option_string">First option</string>
    <string name="second_option_string">Second option</string>
    <string name="third_option_string">Third option</string>
    <string name="send_button_text">Send</string>
</resources>
